--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
 
 # testing
 /coverage
 
 # production
 /build
+
+# editorconfig
+.editorconfig
 
 # misc
 .DS_Store
@@ -18,3 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
