--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "vue-lazyload": "^1.2.3",
     "vue-loader": "^15.1.0",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
     "whatwg-fetch": "^2.0.4"
@@ -54,6 +54,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "mockjs": "^1.0.1-beta3",
+    "postcss-px-to-viewport": "^1.0.0",
+    "postcss-write-svg": "^3.0.1",
     "vant": "^1.1.5",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
